<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".AddEditTaskActivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/difficulty" />

        <RadioGroup
            android:id="@+id/edit_task_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_difficulty_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/easy" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_difficulty_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/middle" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_difficulty_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hard" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minWidth="200dp"
            android:text="@string/date"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_task_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minWidth="200dp"
            android:text="@string/time"
            android:textAlignment="center" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/edit_task_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/repeat"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:showText="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit_task_repeat_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/repeat_type" />

        <RadioGroup
            android:id="@+id/edit_task_repeat_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_repeat_type_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/minute" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_repeat_type_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hour" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_repeat_type_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/day" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_task_repeat_type_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/week" />
        </RadioGroup>

        <NumberPicker
            android:id="@+id/edit_task_repeat_number"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/number"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/edit_task_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/active"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:showText="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>