<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:orientation="horizontal"
    tools:context=".AboutActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/app_title"
        android:background="@color/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_circle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/app_circle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/app_version"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:elevation="4dp"
        android:src="@mipmap/ic_launcher_round"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.PILL" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_author"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_version"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_author"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_author"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_email"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/app_email"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/app_copyright" />
</RelativeLayout>